# tc-state

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md
src/: class.rs  lib.rs
