[package]
name = "tc-state"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
destream = "0.10"
ha-ndarray = "0.5"
number-general = { version = "0.14", default-features = false, features = ["stream"] }
pathlink = "0.4"
safecast = "0.2"
tc-ir = { path = "../tc-ir" }
tc-value = { path = "../tc-value" }
umask = "2.1"

[dev-dependencies]
bytes = "1"
destream_json = { version = "0.15", default-features = false }
futures = "0.3"
